# dotfiles

./: README  mklink.sh
common/: .bashrc  .emacs  .screenrc  .tmux.conf  .vimperatorrc  .zshenv  .zshrc
common/.emacs.d/: init.el
freebsd/: .zshenv.mine  .zshrc.mine
mbp/: .emacs  .emacs.local  .profile  .screenrc  .zprofile  .zshenv  .zshenv.mine  .zshrc
mbp/.emacs.d/: init-local.el
mbp/.hammerspoon/: init.lua
php-emacs23/: .emacs
templates/python/: pyproject.toml  setup.cfg
templates/python/vscode/: keybindings.json  settings.json
wsl2/: install_npiperelay.sh
